# football-analysis

./: .env  Cargo.toml  README.md  docker-compose.yml  init_tables.sh
database/: schema.sql
src/: handlers.rs  http.rs  lib.rs  main.rs  models.rs  stats.rs  validation.rs
