[package]

name = "football-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
env_logger = "0.10.0"
chrono = "0.4.38"
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
